# Inzynierka

./: readme.md
My project/: Assembly-CSharp.csproj
My project/Assets/: New Terrain 1.asset  msgbrowser_settings.asset
My project/Assets/Resources/: ROSConnectionPrefab.prefab
My project/Assets/Scenes/: Final_Copy.unity  Jazda_Do_Celu.unity  SampleScene 1.unity  SampleScene 2.unity  SampleScene.unity
My project/Assets/Scripts/: FollowTarget.cs  LegendaryVelocityControler.cs  LidarPublisher.cs  LidarSensor2D.cs  TFPublisher.cs  gps_pose.cs
My project/Assets/rover/: interials.urdf  rover.urdf
My project/Assets/rover/Materials/: Default.mat  Lidar.mat  New Material 1.mat  New Material.mat  gps_pose.mat  poszycie.mat  rgba-0.752941176470588-0.752941176470588-0.752941176470588-1.mat
My project/Assets/rover/description/meshes/: BL_wheel.prefab  BL_wheel_0.asset  BL_wheel_1.asset  BL_wheel_10.asset  BL_wheel_11.asset  BL_wheel_12.asset  BL_wheel_13.asset  BL_wheel_14.asset  BL_wheel_15.asset  BL_wheel_16.asset  BL_wheel_17.asset  BL_wheel_18.asset  BL_wheel_19.asset  BL_wheel_2.asset  BL_wheel_20.asset  BL_wheel_21.asset  BL_wheel_22.asset  BL_wheel_23.asset  BL_wheel_24.asset  BL_wheel_25.asset  BL_wheel_26.asset  BL_wheel_27.asset  BL_wheel_28.asset  BL_wheel_29.asset  BL_wheel_3.asset  BL_wheel_4.asset  BL_wheel_5.asset  BL_wheel_6.asset  BL_wheel_7.asset  BL_wheel_8.asset  BL_wheel_9.asset  BR_wheel.prefab  BR_wheel_0.asset  BR_wheel_1.asset  BR_wheel_10.asset  BR_wheel_11.asset  BR_wheel_12.asset  BR_wheel_13.asset  BR_wheel_14.asset  BR_wheel_15.asset  (+498 more)
My project/ProjectSettings/: ProjectSettings.asset  TagManager.asset
My project/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
ros2_unity_ws/: Logi_z_przejazdu.txt  autonomy.launch.py  frames_2025-11-02_18.25.55.gv  frames_2025-11-02_18.38.44.gv  scan.yaml
ros2_unity_ws/install/: local_setup.sh  setup.sh
ros2_unity_ws/log/: latest_build
ros2_unity_ws/src/controller/: CMakeLists.txt  package.xml
ros2_unity_ws/src/controller/config/: controllers.yaml
ros2_unity_ws/src/controller/launch/: controller.launch.py
ros2_unity_ws/src/description/: package.xml  setup.py
ros2_unity_ws/src/keyboard_teleop/: package.xml  setup.py
ros2_unity_ws/src/obstacle_avoidance/: setup.py
ros2_unity_ws/src/obstacle_avoidance/obstacle_avoidance/: FuzzyTS_GoTo_V2.py  FuzzyTS_between_walls.py  FuzzyTS_obstacle_avoidance.py
ros2_unity_ws/src/ros_tcp_endpoint/: setup.py
(+52 files in other folders)
